--- a/TnTComponents/Forms/TnTPasswordBox.razor
+++ b/TnTComponents/Forms/TnTPasswordBox.razor
@@ -41,4 +41,6 @@
 
 
 </div>
-<ValidationMessage class="@GetValidationMessageCssClass()" theme="@Theme" For="ValueExpression" />
+@if (ShowValidation) {
+    <ValidationMessage class="@GetValidationMessageCssClass()" theme="@Theme" For="ValueExpression" />
+}
