--- a/TnTComponents.Testing/TnTComponents.Client/Pages/Home.razor
+++ b/TnTComponents.Testing/TnTComponents.Client/Pages/Home.razor
@@ -2,7 +2,7 @@
 @using System.ComponentModel.DataAnnotations;
 @using TnTComponents.Enum;
 @using TnTComponents.Forms
-@attribute [RenderModeInteractiveAuto]
+@rendermode RenderMode.InteractiveAuto
 
 <TnTLayout Responsive="true">
     <TnTHeader SideBarExpanded="@_sideBarExpanded">
@@ -40,33 +40,41 @@
         </TnTSideBarList>
     </TnTSideBar>
     <TnTBody SideBarExpanded="@_sideBarExpanded">
-        <TnTForm FormType="@_formType" TModelType="MyModel" Model="@_model" OnValidSubmit="@Submit" OnInvalidSubmit="@InvalidSubmit">
-            <DataAnnotationsValidator />
-            <TnTTextBox Icon="@_icon" @bind-Value="_model.Name" Label="My Label" Placeholder="@_placeholder" Disabled="@_disabled" />
-            <TnTPasswordBox Icon="@_icon" @bind-Value="_model.Password" Label="Password" Placeholder="@_placeholder" Disabled="@_disabled" AllowPasswordReveal="true" />
-            <TnTNumeric Icon="@_icon" @bind-Value="_model.Number" Label="Number" Placeholder="@_placeholder" Disabled="@_disabled" />
-            <TnTCheckbox Icon="@_icon" @bind-Value="_model.CheckBox" Label="Checkbox" Placeholder="@_placeholder" Disabled="@_disabled" />
-            <TnTSwitch Icon="@_icon" @bind-Value="_model.Switch" Label="Switch" Placeholder="@_placeholder" Disabled="@_disabled" />
-            <TnTDropDown Icon="@_icon" ListItems="@_listItems" @bind-Value="_model.DropDownItem" Label="DropDownItem" Placeholder="@_placeholder" Disabled="@_disabled" AllowClear="@_allowClear" />
-            <button type="submit">
-                Submit
-            </button>
-        </TnTForm>
+        <TnTRow>
+            <TnTColumn S="12" M="6">
 
-        <TnTButton Text="Toggle Disable" OnClick="@(() => _disabled = !_disabled)">
-        </TnTButton>
+                <TnTForm FormType="@_formType" TModelType="MyModel" Model="@_model" OnValidSubmit="@Submit" OnInvalidSubmit="@InvalidSubmit">
+                    <DataAnnotationsValidator />
+                    <TnTTextBox Icon="@_icon" @bind-Value="_model.Name" Label="My Label" Placeholder="@_placeholder" Disabled="@_disabled" />
+                    <TnTPasswordBox Icon="@_icon" @bind-Value="_model.Password" Label="Password" Placeholder="@_placeholder" Disabled="@_disabled" AllowPasswordReveal="true" />
+                    <TnTNumeric Icon="@_icon" @bind-Value="_model.Number" Label="Number" Placeholder="@_placeholder" Disabled="@_disabled" />
+                    <TnTCheckbox Icon="@_icon" @bind-Value="_model.CheckBox" Label="Checkbox" Placeholder="@_placeholder" Disabled="@_disabled" />
+                    <TnTSwitch Icon="@_icon" @bind-Value="_model.Switch" Label="Switch" Placeholder="@_placeholder" Disabled="@_disabled" />
+                    <TnTDropDown Icon="@_icon" ListItems="@_listItems" @bind-Value="_model.DropDownItem" Label="DropDownItem" Placeholder="@_placeholder" Disabled="@_disabled" AllowClear="@_allowClear" />
+                    <TnTDatePicker Icon="@_icon" @bind-Value="_model.DateValue" Label="DropDownItem" Placeholder="@_placeholder" Disabled="@_disabled" AllowClear="@_allowClear" />
+                    <button type="submit">
+                        Submit
+                    </button>
+                </TnTForm>
+            </TnTColumn>
 
-        <TnTButton Text="Toggle Form Type" OnClick="@(() => RotateFormType())">
+            <TnTColumn S="12" M="6">
+                <TnTButton Text="Toggle Disable" OnClick="@(() => _disabled = !_disabled)">
+                </TnTButton>
 
-        </TnTButton>
-        <TnTButton Text="Toggle Icon" OnClick="@(() => ToggleIcon())">
-        </TnTButton>
+                <TnTButton Text="Toggle Form Type" OnClick="@(() => RotateFormType())">
 
-        <TnTButton Text="Toggle Placeholder" OnClick="@(() => TogglePlaceholder())">
-        </TnTButton>
+                </TnTButton>
+                <TnTButton Text="Toggle Icon" OnClick="@(() => ToggleIcon())">
+                </TnTButton>
 
-        <TnTButton Text="Toggle AllowClear" OnClick="@(() => _allowClear = !_allowClear)">
-        </TnTButton>
+                <TnTButton Text="Toggle Placeholder" OnClick="@(() => TogglePlaceholder())">
+                </TnTButton>
+
+                <TnTButton Text="Toggle AllowClear" OnClick="@(() => _allowClear = !_allowClear)">
+                </TnTButton>
+            </TnTColumn>
+        </TnTRow>
 
         <div>
             @_model.Name
@@ -90,7 +98,7 @@
     </HeadContent>
 
 
-@code {
+    @code {
     private bool _dark = false;
     private bool _sideBarExpanded = false;
     private MyModel _model = new MyModel();
@@ -169,6 +177,9 @@
         public bool Switch { get; set; }
         [Required]
         public MyListItem DropDownItem { get; set; }
+        [Required]
+        public DateOnly DateValue { get; set; }
+
     }
 
 
