--- a/TnTComponents/Forms/TnTTextBox.razor
+++ b/TnTComponents/Forms/TnTTextBox.razor
@@ -14,4 +14,6 @@
 
     <label class="@GetLabelCssClass()" @onclick="SetInputFocus">@Label</label>
 </div>
-<ValidationMessage class="@GetValidationMessageCssClass()" theme="@Theme" For="ValueExpression" />
+@if (ShowValidation) {
+    <ValidationMessage class="@GetValidationMessageCssClass()" theme="@Theme" For="ValueExpression" />
+}
