--- a/TnTComponents/Styles/Common/_grid.scss
+++ b/TnTComponents/Styles/Common/_grid.scss
@@ -38,8 +38,8 @@ $element-bottom-margin: ($gutter-width*2)/3 !default;
 }
 
 .tnt-col .tnt-row {
-    margin-left: (-1 * $gutter-width / 2);
-    margin-right: (-1 * $gutter-width / 2);
+    //margin-left: (-1 * $gutter-width / 2);
+    //margin-right: (-1 * $gutter-width / 2);
 }
 
 .section {
@@ -83,10 +83,12 @@ $element-bottom-margin: ($gutter-width*2)/3 !default;
 
 
 .tnt-row {
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 20px;
-    width: 100%;
+    display: flex;
+    flex-direction: row;
+    //margin-left: auto;
+    //margin-right: auto;
+    //margin-bottom: 20px;
+    //width: 100%;
     // Clear floating children
     &:after {
         content: "";
@@ -95,10 +97,12 @@ $element-bottom-margin: ($gutter-width*2)/3 !default;
     }
 
     .tnt-col {
-        float: left;
-        box-sizing: border-box;
-        padding: 0 $gutter-width / 2;
-        min-height: 1px;
+        display: flex;
+        flex-direction: column;
+        //float: left;
+        //box-sizing: border-box;
+        //padding: 0 $gutter-width / 2;
+        //min-height: 1px;
 
         &[class*="push-"],
         &[class*="pull-"] {
