--- a/TnTComponents/TnTRow.razor
+++ b/TnTComponents/TnTRow.razor
@@ -1,7 +1,8 @@
-﻿@inherits TnTBaseComponent
+﻿@using System.Text
+@inherits TnTBaseComponent
 
 <CascadingValue IsFixed="true" Value="this">
-    <div class="tnt-row">
+    <div class="@GetCssClass()" style="@GetCustomStyle()">
         @ChildContent
     </div>
 </CascadingValue>
@@ -9,4 +10,33 @@
 @code {
     [Parameter]
     public RenderFragment ChildContent { get; set; } = default!;
+
+    [Parameter]
+    public override string BaseCssClass { get; set; } = "tnt-row";
+
+    [Parameter]
+    public FlexWrap FlexWrap { get; set; }
+
+    [Parameter]
+    public FlexAlignContent FlexAlignContent { get; set; }
+
+    [Parameter]
+    public FlexJustifyContent FlexJustifyContent { get; set; }
+
+    [Parameter]
+    public FlexAlignItems FlexAlignItems { get; set; }
+
+
+    protected override string GetCustomStyle() {
+        var strBuilder = new StringBuilder(FlexWrap.Wrap.ToStyle())
+        .Append(' ').Append(FlexAlignContent.ToStyle())
+        .Append(' ').Append(FlexJustifyContent.ToStyle())
+        .Append(' ').Append(FlexAlignItems.ToStyle());
+
+        if (AdditionalAttributes?.TryGetValue("style", out var result) ?? false) {
+            strBuilder.Append(' ').Append(result);
+        }
+        return strBuilder.ToString();
+    }
+
 }
