--- a/TnTComponents/Forms/TnTDatePicker.razor
+++ b/TnTComponents/Forms/TnTDatePicker.razor
@@ -14,7 +14,7 @@
                @onfocusin="OnFocusInAsync" />
 
 
-        <div class="tnt-date-time-picker">
+        <div class="tnt-date-time-picker @(HasSpaceBelow ? string.Empty : "dropup")">
             <TnTRow FlexAlignItems="FlexAlignItems.Center">
                 <TnTColumn S="1" FlexAlignItems="FlexAlignItems.Center">
 
@@ -34,14 +34,21 @@
 
                 <TnTColumn S="6" FlexAlignItems="FlexAlignItems.Center">
 
-                    <TnTDropDown ListItems="_months" AllowClear="false" Label="Month" DisabledItems="_disabledMonths" @bind-Value="_selectedMonth" class="tnt-month-picker">
-
-
+                    <TnTDropDown ListItems="_months"
+                                 AllowClear="false"
+                                 Label="Month"
+                                 DisabledItems="_disabledMonths"
+                                 ItemValueCallback="@DateTimeFormatInfo.CurrentInfo.GetMonthName"
+                                 @bind-Value="_dropdownMonths"
+                                 class="tnt-month-picker">
+                        <ListItemTemplate>
+                            @DateTimeFormatInfo.CurrentInfo.GetMonthName(context)
+                        </ListItemTemplate>
                     </TnTDropDown>
                 </TnTColumn>
 
                 <TnTColumn S="4" FlexAlignItems="FlexAlignItems.Center">
-                    <TnTDropDown ListItems="_years" AllowClear="false" Label="Year" @bind-Value="_selectedYear" class="tnt-year-picker" />
+                    <TnTDropDown ListItems="_years" AllowClear="false" Label="Year" @bind-Value="_dropdownYears" class="tnt-year-picker" />
                 </TnTColumn>
 
                 <TnTColumn S="1" FlexAlignItems="FlexAlignItems.Center">
@@ -60,7 +67,7 @@
                     }
                 </TnTColumn>
             </TnTRow>
-            <TnTRow FlexAlignItems="FlexAlignItems.Center">
+            <TnTRow FlexJustifyContent="FlexJustifyContent.Center">
                 <table>
                     <thead>
                         <tr>
@@ -79,7 +86,7 @@
                             <tr>
                                 @for (var j = 0; j < 7; ++j, date = date.AddDays(1)) {
                                     var itemDate = date;
-                                    <td @onclick="@(() => SelectDate(itemDate))" @onclick:stopPropagation="true">
+                                    <td @onclick="@(() => Value = itemDate)" @onclick:stopPropagation="true">
                                         <div class="@GetDateItemClass(itemDate)">
                                             @itemDate.Day
                                         </div>
@@ -97,29 +104,23 @@
         case IconType.FontAwesome:
         <i class="fa fa-close" @onclick="ClearSelection"></i>
         break;
-
         case IconType.MaterialIcons:
         <i class="material-icons" @onclick="ClearSelection">close</i>
         break;
-
         default:
         throw new NotImplementedException();
         }
         }
-
         @switch (IconType) {
         case IconType.FontAwesome:
         <i class="fa fa-dropdown" @onclick="@(() => OnFocusInAsync(new FocusEventArgs()))"></i>
         break;
-
         case IconType.MaterialIcons:
         <i class="material-icons" @onclick="@(() => OnFocusInAsync(new FocusEventArgs()))">arrow_drop_down</i>
         break;
-
         default:
         throw new NotImplementedException();
         }
-
         <label class="@GetLabelCssClass()" @onclick="SetInputFocus">@Label</label>
         *@
     </div>
