--- a/TnTComponents/Forms/TnTDatePicker.razor
+++ b/TnTComponents/Forms/TnTDatePicker.razor
@@ -1,5 +1,5 @@
 ﻿@using System.Globalization
-@inherits TnTInputDialogField<DateOnly>
+@inherits TnTInputDialogField<DateOnly?>
 
 <TnTExternalClickHandler Callback="@(() => OnFocusOutAsync(new FocusEventArgs()))">
     <div theme="@Theme" class="@GetCssClass()" @ref="@ContainerElementReference">
@@ -17,14 +17,13 @@
         <div class="tnt-date-time-picker @(HasSpaceBelow ? string.Empty : "dropup")">
             <TnTRow FlexAlignItems="FlexAlignItems.Center">
                 <TnTColumn S="1" FlexAlignItems="FlexAlignItems.Center">
-
                     @switch (IconType) {
                         case IconType.FontAwesome:
-                            <i class="fa fa-arrow-left @(Disabled ? "disabled" : string.Empty)" @onclick="PrevMonth"></i>
+                            <i class="fa fa-arrow-left @(CanShowPrevMonth() ? string.Empty : "disabled")" @onclick="PrevPage"></i>
                             break;
 
                         case IconType.MaterialIcons:
-                            <i class="material-icons  @(Disabled ? "disabled" : string.Empty)" @onclick="PrevMonth">chevron_left</i>
+                            <i class="material-icons  @(CanShowPrevMonth() ? string.Empty: "disabled")" @onclick="PrevPage">chevron_left</i>
                             break;
 
                         default:
@@ -39,7 +38,7 @@
                                  Label="Month"
                                  DisabledItems="_disabledMonths"
                                  ItemValueCallback="@DateTimeFormatInfo.CurrentInfo.GetMonthName"
-                                 @bind-Value="_dropdownMonths"
+                                 @bind-Value="_dropdownMonth"
                                  class="tnt-month-picker">
                         <ListItemTemplate>
                             @DateTimeFormatInfo.CurrentInfo.GetMonthName(context)
@@ -48,18 +47,18 @@
                 </TnTColumn>
 
                 <TnTColumn S="4" FlexAlignItems="FlexAlignItems.Center">
-                    <TnTDropDown ListItems="_years" AllowClear="false" Label="Year" @bind-Value="_dropdownYears" class="tnt-year-picker" />
+                    <TnTDropDown ListItems="_years" AllowClear="false" Label="Year" @bind-Value="_dropdownYear" class="tnt-year-picker" />
                 </TnTColumn>
 
                 <TnTColumn S="1" FlexAlignItems="FlexAlignItems.Center">
 
                     @switch (IconType) {
                         case IconType.FontAwesome:
-                            <i class="fa fa-arrow-right @(Disabled ? "disabled" : string.Empty)" @onclick="NextMonth"></i>
+                            <i class="fa fa-arrow-right @(CanShowNextMonth() ? string.Empty: "disabled")" @onclick="NextPage"></i>
                             break;
 
                         case IconType.MaterialIcons:
-                            <i class="material-icons  @(Disabled ? "disabled" : string.Empty)" @onclick="NextMonth">chevron_right</i>
+                            <i class="material-icons  @(CanShowNextMonth() ? string.Empty: "disabled")" @onclick="NextPage">chevron_right</i>
                             break;
 
                         default:
@@ -86,7 +85,7 @@
                             <tr>
                                 @for (var j = 0; j < 7; ++j, date = date.AddDays(1)) {
                                     var itemDate = date;
-                                    <td @onclick="@(() => Value = itemDate)" @onclick:stopPropagation="true">
+                                    <td @onclick="@(() => SelectDate(itemDate))" @onclick:stopPropagation="true">
                                         <div class="@GetDateItemClass(itemDate)">
                                             @itemDate.Day
                                         </div>
@@ -98,31 +97,29 @@
                 </table>
             </TnTRow>
         </div>
-        @*
         @if (AllowClear && !string.IsNullOrWhiteSpace(CurrentValueAsString)) {
-        switch (IconType) {
-        case IconType.FontAwesome:
-        <i class="fa fa-close" @onclick="ClearSelection"></i>
-        break;
-        case IconType.MaterialIcons:
-        <i class="material-icons" @onclick="ClearSelection">close</i>
-        break;
-        default:
-        throw new NotImplementedException();
-        }
+            switch (IconType) {
+                case IconType.FontAwesome:
+                    <i class="fa fa-close" @onclick="ClearSelection"></i>
+                    break;
+                case IconType.MaterialIcons:
+                    <i class="material-icons" @onclick="ClearSelection">close</i>
+                    break;
+                default:
+                    throw new NotImplementedException();
+            }
         }
         @switch (IconType) {
-        case IconType.FontAwesome:
-        <i class="fa fa-dropdown" @onclick="@(() => OnFocusInAsync(new FocusEventArgs()))"></i>
-        break;
-        case IconType.MaterialIcons:
-        <i class="material-icons" @onclick="@(() => OnFocusInAsync(new FocusEventArgs()))">arrow_drop_down</i>
-        break;
-        default:
-        throw new NotImplementedException();
+            case IconType.FontAwesome:
+                <i class="fa fa-dropdown" @onclick="@(() => OnFocusInAsync(new FocusEventArgs()))"></i>
+                break;
+            case IconType.MaterialIcons:
+                <i class="material-icons" @onclick="@(() => OnFocusInAsync(new FocusEventArgs()))">arrow_drop_down</i>
+                break;
+            default:
+                throw new NotImplementedException();
         }
         <label class="@GetLabelCssClass()" @onclick="SetInputFocus">@Label</label>
-        *@
     </div>
 </TnTExternalClickHandler>
 @if (ShowValidation) {
