--- a/TnTComponents/Styles/Common/_functions.scss
+++ b/TnTComponents/Styles/Common/_functions.scss
@@ -58,13 +58,13 @@
 }
 
 @function getDisableColor($baseColor) {
-    $adjustmentPercent: 20%;
+    $adjustmentPercent: -20%;
 
     @if(color.lightness($baseColor) > 50) {
-        $adjustmentPercent: $adjustmentPercent * -1;
+        @return color.adjust($baseColor, $lightness: $adjustmentPercent);
     }
 
-    @return color.adjust($baseColor, $lightness: $adjustmentPercent);
+    @return color.adjust($baseColor, $alpha: -0.5);
 }
 
 @function getSelectedColor($baseColor) {
