--- a/TnTComponents/Styles/Components/forms/_datetimepicker.scss
+++ b/TnTComponents/Styles/Components/forms/_datetimepicker.scss
@@ -3,13 +3,23 @@
 .tnt-form-field[theme=default].date-picker {
     .tnt-date-time-picker {
         background-color: $tnt-color-primary-container;
-        //
-        //    span {
-        //        i {
-        //            color: $tnt-color-on-primary-container;
-        //        }
-        //    }
-        //
+
+        i {
+            color: $tnt-color-on-primary-container;
+
+            &.disabled {
+                color: getDisableColor($tnt-color-on-primary-container);
+
+                &:hover {
+                    background-color: transparent;
+                }
+
+                &:active {
+                    background-color: transparent;
+                }
+            }
+        }
+
         .tnt-input-field-label {
             background-color: $tnt-color-primary-container;
         }
@@ -48,16 +58,25 @@
                         }
 
                         &.out-of-month, &.disabled {
-                            color: color.adjust($tnt-color-on-primary-container, $alpha: -0.5);
+                            color: getDisableColor($tnt-color-on-primary-container);
 
                             &.current-date {
-                                color: color.adjust($tnt-color-primary, $alpha: -0.5);
-                                border: 2px solid color.adjust($tnt-color-primary, $alpha: -0.5);
+                                color: getDisableColor($tnt-color-primary);
+                                border: 2px solid getDisableColor($tnt-color-primary);
                             }
 
                             &.selected {
-                                color: color.adjust($tnt-color-surface, $alpha: -0.5);
-                                background-color: color.adjust($tnt-color-primary, $alpha: -0.5);
+                                background-color: getDisableColor($tnt-color-primary);
+                            }
+                        }
+
+                        &.disabled {
+                            &:hover {
+                                background-color: transparent;
+                            }
+
+                            &:active {
+                                background-color: transparent;
                             }
                         }
                     }
@@ -95,12 +114,18 @@
         visibility: hidden;
         transition: 150ms;
         padding: 1rem 0.1rem 1rem 0.1rem;
+        cursor: default;
         @extend .tnt-border-radius-2;
         @extend .tnt-z-depth-2;
+
 
         i {
             border-radius: 100%;
             user-select: none;
+
+            &.disabled {
+                cursor: default;
+            }
         }
 
         .tnt-month-picker, .tnt-year-picker {
